--- a/ChipScope_TB_summary.html
+++ b/ChipScope_TB_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ChipScope_TB Project Status (10/20/2024 - 21:57:29)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>OTMB_2013_PRBS_Checker_USB.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/*.xmsgs?&DataKey=Warning'>120 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/*.xmsgs?&DataKey=Warning'>149 Warnings (4 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,19 +60,19 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>286</TD>
+<TD ALIGN=RIGHT>641</TD>
 <TD ALIGN=RIGHT>301,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>273</TD>
+<TD ALIGN=RIGHT>627</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>14</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,31 +90,31 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>171</TD>
+<TD ALIGN=RIGHT>408</TD>
 <TD ALIGN=RIGHT>150,720</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>154</TD>
+<TD ALIGN=RIGHT>272</TD>
 <TD ALIGN=RIGHT>150,720</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>60</TD>
+<TD ALIGN=RIGHT>139</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>41</TD>
+<TD ALIGN=RIGHT>79</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>53</TD>
+<TD ALIGN=RIGHT>54</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,7 +126,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Memory</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>98</TD>
 <TD ALIGN=RIGHT>58,400</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -144,43 +144,43 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift Register</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>98</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>73</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>24</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>38</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>29</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>9</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -192,57 +192,63 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>168</TD>
+<TD ALIGN=RIGHT>317</TD>
 <TD ALIGN=RIGHT>37,680</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>292</TD>
+<TD ALIGN=RIGHT>713</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>45</TD>
-<TD ALIGN=RIGHT>292</TD>
-<TD ALIGN=RIGHT>15%</TD>
+<TD ALIGN=RIGHT>158</TD>
+<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>22%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>121</TD>
-<TD ALIGN=RIGHT>292</TD>
-<TD ALIGN=RIGHT>41%</TD>
+<TD ALIGN=RIGHT>305</TD>
+<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>42%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>126</TD>
-<TD ALIGN=RIGHT>292</TD>
-<TD ALIGN=RIGHT>43%</TD>
+<TD ALIGN=RIGHT>250</TD>
+<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>35%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>78</TD>
+<TD ALIGN=RIGHT>124</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>466</TD>
+<TD ALIGN=RIGHT>749</TD>
 <TD ALIGN=RIGHT>301,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>36</TD>
+<TD ALIGN=RIGHT>53</TD>
 <TD ALIGN=RIGHT>600</TD>
-<TD ALIGN=RIGHT>6%</TD>
+<TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>36</TD>
-<TD ALIGN=RIGHT>36</TD>
+<TD ALIGN=RIGHT>53</TD>
+<TD ALIGN=RIGHT>53</TD>
 <TD ALIGN=RIGHT>100%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;IOB Flip Flops</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of bonded IPADs</TD>
@@ -270,9 +276,21 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB36E1/FIFO36E1s</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>3</TD>
 <TD ALIGN=RIGHT>416</TD>
-<TD ALIGN=RIGHT>0%</TD>
+<TD ALIGN=RIGHT>1%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number using RAMB36E1 only</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number using FIFO36E1 only</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB18E1/FIFO18E1s</TD>
@@ -300,9 +318,21 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of ILOGICE1/ISERDESE1s</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>7</TD>
 <TD ALIGN=RIGHT>720</TD>
-<TD ALIGN=RIGHT>0%</TD>
+<TD ALIGN=RIGHT>1%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as ILOGICE1s</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as ISERDESE1s</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of OLOGICE1/OSERDESE1s</TD>
@@ -419,8 +449,14 @@ System Settings</A>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RPM macros</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>2.13</TD>
+<TD ALIGN=RIGHT>2.41</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -457,21 +493,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:44:55 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Warning'>57 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Info'>69 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:45:01 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:45:30 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>10 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:46:15 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>44 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:55:07 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Warning'>117 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/xst.xmsgs?&DataKey=Info'>72 Infos (49 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:55:13 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:55:46 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Warning'>11 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:56:31 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Warning'>11 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:46:27 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Sep 23 20:47:11 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>9 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:56:42 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sun Oct 20 21:57:28 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>10 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 20:46:12 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 23 20:47:13 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\ChipScope_TB.grf'>Guide Results Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Oct 20 21:56:27 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Jerry Xu/Desktop/OTMB/OTMB_2013_PRBS_Checker_USB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Oct 20 21:57:29 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/11/2024 - 16:19:32</center>
+<br><center><b>Date Generated:</b> 10/20/2024 - 21:57:29</center>
 </BODY></HTML>
